--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
-server.port: 9000
-management.port: 9001
-management.address: 127.0.0.1
+server.port= 12000
+#server.port=8443
+#server.ssl.key-store=keystore.p12
+#server.ssl.key-store-password=password
+#server.ssl.keyStoreType=PKCS12
+#server.ssl.keyAlias=tomcat
+
+logging.file=wfp-bot.log
+logging.path=./logs
+logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
