--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ server.port= 12000
 #server.ssl.key-store-password=password
 #server.ssl.keyStoreType=PKCS12
 #server.ssl.keyAlias=tomcat
+#wfp.server = http://192.168.99.100:8000
+wfp.server = http://localhost:12005
+
 
 logging.file=wfp-bot.log
 logging.path=./logs
